--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
             "name": "Públio Cavalcante"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "firebase/php-jwt": "^6.3",
